resources.css
body {
  text-align: center;
  background-color:darkblue;
  color: lavender;
}

.navbar{
  justify-content: center !important;
}

.navbar-brand{
  padding-left: 2.5rem;
}

/*phone size*/

@media only screen and (max-width: 425px){

  .navbar{
    display: block !important;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
  .nav{
    display: flex;
  }

  .navbar-brand{
  margin: 0;
  padding:  0 !important;
  padding-right: 0.5rem !important;

  }
}

.btn-secondary{
  background-color: rgb(230, 230, 250) !important;
}

.b_color{
  background-color: rgb(230, 230, 250) !important;
}

.text {
  text-align: center;
  font-size: 18px;
  padding: 1px 50px;
}

.list {
  text-align: left;
  font-size: 18px;
  padding: 1px 40px;
}

